# Knowledge-OS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  drill  gpt52codex-review.md  pyproject.toml  read  study  today
config/: content.yaml.example  content.yaml.example.external  reader.yaml.example  study.yaml.example
docs/: EDUCATORS.md  GETTING_STARTED.md  Introduction-to-this-Project.md  PEDAGOGY.md  TROUBLESHOOTING.md  USAGE.md  knowledge-os-manifesto.md  prompts.md
docs/manual/: SKILL-AUTHORING.md  SKILLS-DESIGN.md  architecture.md  builder_prompt.md  workflow.md
docs/media/: SCREENSHOTS_NEEDED.md  last-question-chat.md
docs/specs/: roadmap.md  unified-cli.md
knos/: __init__.py  cli.py
knos/commands/: drill.py  init.py  progress.py  read.py  study.py  today.py
knos/reader/: OVERVIEW.md  __init__.py  config.py  config.yaml.example  content.py  content_registry.yaml.example  cuda_utils.py  llm.py  prompts.py  session.py  tts.py  types.py  voice.py
knos/reader/prompts/: base.md  base_review.md  card_generation.md  challenge.md  clarify.md  quiz.md  review.md  socratic.md  teach.md  technical.md
knos/reader/screens/: __init__.py  dialogue.py  generate_cards.py  quiz_chapter_picker.py  quiz_history.py  select_chapter.py  select_material.py  sessions.py
knos/reader/tts/: __init__.py  base.py  chatterbox.py  kokoro.py  utils.py
knos/reviewer/: __init__.py  core.py  reviewer.py
knos/tui/: app.py
knos/tui/screens/: browse.py  dashboard.py  drill.py  drill_queue.py  progress_modal.py
knos/tui/styles/: app.tcss
knos/tui/widgets/: __init__.py  panels.py  reveal_block.py
plan/: checklist.md.example  priority_shift.md.example  schedule.json.example  study_config.yaml.example  syllabus.md.example  todo.md.example
reader/: OVERVIEW.md  config.py  config.yaml.example  content.py  content_registry.yaml.example  epub.py  llm.py  prompts.py  session.py  tts.py  voice.py
reader/classics/: brothers-karamazov.epub  don-quixote.epub  nicomachean-ethics.epub
reader/prompts/: base.md  clarify.md  socratic.md  teach.md  technical.md
reader/screens/: dialogue.py  generate_cards.py  select_chapter.py  select_material.py  sessions.py
reviewer/: README.md  core.py  reviewer.py
scripts/: ch02_text_data.py  progress.py
scripts/ch02/: 01_regex_tokenization.py  02_vocabulary_building.py  03_simple_tokenizer_v1.py  04_simple_tokenizer_v2.py  05_bpe_tiktoken_usage.py  06_gpt_dataset_v1.py  07_create_dataloader_v1.py  08_token_embeddings.py  09_positional_embeddings.py  _card_generator.py
solutions/examples/: README.md
solutions/examples/algebra/: function_notation.md  logarithm_properties.md  quadratic_formula.md
solutions/examples/algorithms/: binary_search.md
solutions/examples/economics/: supply_demand.md
solutions/examples/logic/: modus_ponens.md
solutions/examples/philosophy/: aristotle_four_causes.md
solutions/examples/psychology/: classical_conditioning.md  operant_conditioning.md  research_methods.md
tui/: __init__.py
tui/screens/: browse.py  dashboard.py  drill.py  drill_queue.py  progress_modal.py
tui/styles/: app.tcss
tui/widgets/: panels.py  reveal_block.py
